--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Upload a File</h1>
-<form id="temp_form" action=http://localhost:8080/CreateReportAndContract_war/servlet method="post"
+<form id="temp_form" action=http://localhost:8080/servlet method="post"
 	  enctype="multipart/form-data">
 	<!--<form id="temp_form" action=/acts/recognize method="post" enctype="multipart/form-data">-->
 	<p>
@@ -20,9 +20,12 @@
 	<input type="hidden" name="ws_code" id="shopCode" value="shopCode" style="display:none">
 	<!--<input type="text" name="token" id="123414" value="123414" style="display:none">-->
 	<input type="submit" value="Upload It"/>
-	<input type="submit" value="delete"/>
+</form>
+<form action=http://localhost:8080/servlet method="get">
+	<input type="submit" value="DELETE" name ="delete"/>
+</form>
+
 	<!--<input type="submit" value="add data"/>-->
 
-</form>
 </body>
 </html>
