--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Form Page</title>
-	<script src="f_file_upload_from_pc.js"></script>
+	<!--<script src="f_file_upload_from_pc.js"></script>-->
 </head>
 <body>
 <h1>Upload a File</h1>
-<form id="temp_form" action=http://localhost:8080/servlet method="post"
+<form  action="http://localhost:8080/servlet" method="post"
 	  enctype="multipart/form-data">
-	<!--<form id="temp_form" action=/acts/recognize method="post" enctype="multipart/form-data">-->
+
 	<p>
 		specify a patch: <input type="text" name="path" value=""/></BR></BR>
 	</p>
@@ -17,13 +17,13 @@
 	<p>
 		Select a file : <input type="file" name="file" size="50"/>
 	</p>
-	<input type="hidden" name="ws_code" id="shopCode" value="shopCode" style="display:none">
+	<input type="hidden" name="ws_code" value="shopCode" style="display:none">
 	<!--<input type="text" name="token" id="123414" value="123414" style="display:none">-->
 	<input type="submit" value="Upload It"/>
 </form>
 
 
-<form action=http://localhost:8080/servlet method="get">
+<form action="http://localhost:8080/servlet" method="get">
 	<input type="submit" value="DELETE" name ="delete"/>
 </form>
 
