--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,23 +2,33 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Form Page</title>
-	<!--<script src="f_file_upload_from_pc.js"></script>-->
+	<title></title>
 </head>
 <br>
 <h1>Загрузка файла</h1>
-<br action="http://localhost:8080/servlet" method="post"
+<form action="http://localhost:8080/servlet" method="post"
 	enctype="multipart/form-data">
 <p>
-	укажите путь сохранения: <input type="text" name="path" value=""/></BR></BR>
+	укажите путь сохранения: <input type="text" name="path" value=""/>
 </p>
 <p>
 	<input type="file" name="file" size="50"/>
 </p>
-<input type="hidden" name="ws_code" value="shopCode" style="display:none">
-<input type="submit" value="Загрузить файл"/></br></br>
+	<input type="hidden" name="ws_code" id="shopCode" value="shopCode" style="display:none"/>
+	<input type="text" name="token" id="123414" value="123414" style="display:none">
+<!--<input type="hidden" name="ws_code" value="shopCode" style="display:none">-->
+	<input type="submit" value="Загрузите файл"/>
+</form>
 
-<input type="submit" value="ЗАГРУЗИТЬ ДАННЫЕ" name="delete"/></BR></br>
+<form action="">
+<input type="submit" value="Загрузите данные" name="upload"/></BR></br>
+</form>
+
+<form action="http://localhost:8080/servletDelete" method="post">
+<input type="submit" value="Удалить данные" name="delete"/></BR></br>
+</form>
+
+
 <input type="submit" value="СМОТРЕТЬ ДАННЫЕ" name="view"/>
 
 <body>
@@ -30,10 +40,5 @@
 </a></p>
 </body>
 
-</form>
-
-
 <!--<input type="submit" value="add data"/>-->
-
-</body>
 </html>
