refactoring: регистрация пользователя ч/з сервлет

--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -6,12 +6,12 @@
 	<title>Регистрация</title>
 </head>
 <body>
-<h3>Provide all the fields for registration.</h3>
+<h3>Заполните поля регистрации пользователя: </h3>
 <form action="Register" method="post">
 	<strong>Email ID</strong>:<input type="text" name="email"><br>
-	<strong>Password</strong>:<input type="password" name="password"><br>
-	<strong>Name</strong>:<input type="text" name="name"><br>
-	<strong>Country</strong>:<input type="text" name="country"><br>
+	<strong>Пароль</strong>:<input type="password" name="password"><br>
+	<strong>Имя</strong>:<input type="text" name="first-name"><br>
+	<strong>Фамилия</strong>:<input type="text" name="last-name"><br>
 	<input type="submit" value="Register">
 </form>
 <br>
