refactoring: добавление кнопок delet + insert

--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -13,6 +13,7 @@
 	<strong>Имя</strong>:<input type="text" name="first-name"><br>
 	<strong>Фамилия</strong>:<input type="text" name="last-name"><br>
 	<input type="submit" value="Register">
+	<input	 type="submit"value="Delete">
 </form>
 <br>
 If you are registered user, please <a href="login.html">login</a>.
