refactoring: заполнение таблицы преподавателей

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -7,13 +7,12 @@
 
 </head>
 <body>
-<h3>Login with email and password</h3>
+<h3>Авторизация</h3>
 <form action="Login" method="post">
-	<strong>User Email</strong>:<input type="text" name="email"><br>
-	<strong>Password</strong>:<input type="password" name="password"><br>
+	<strong>Ваш логин</strong>:<input type="text" name="email"><br>
+	<strong>Ваш пароль</strong>:<input type="password" name="password"><br>
 	<input type="submit" value="Login">
 </form>
-<br>
-If you are new user, please <a href="register.html">register</a>.
+<br> <a href="register.html">register</a>.
 </body>
 </html>
